--- a/index.html
+++ b/index.html
@@ -54,8 +54,17 @@
       position: relative;
       width: 100%;
       height: 100vh;
-      background: url('lab-photo.png') center/cover no-repeat;
-      filter: brightness(0.4);
+      background: url('lab-photo.jpg') center/cover no-repeat;
+    }
+
+    .overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.6);
+      z-index: 1;
     }
 
     .hero-content {
@@ -67,14 +76,16 @@
       max-width: 90%;
       opacity: 0;
       animation: fadeIn 2s ease-in-out forwards;
+      z-index: 2;
     }
 
     .logo {
       position: absolute;
       top: 30px;
       left: 30px;
-      width: 120px;
-      z-index: 10;
+      width: 180px;
+      height: auto;
+      z-index: 3;
     }
 
     h1 {
@@ -155,6 +166,7 @@
   </h1>
 
   <header>
+    <div class="overlay"></div>
     <img src="biobrix-logo.png" alt="Biobrix Logo" class="logo">
     <div class="lang-toggle" onclick="toggleLanguage()">FR</div>
     <div class="hero-content">
