--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     "@type": "Organization",
     "name": "Biobrix",
     "url": "https://www.biobrix.io",
-    "logo": "https://www.biobrix.io/biobrix-logo.png",
+    "logo": "https://www.biobrix.io/biobrix_logo_4_1_aspect_whitebg.png",
     "description": "Biobrix is a biotech startup based in Paris that uses AI and cell morphology data for drug discovery.",
     "sameAs": [
       "https://www.linkedin.com/company/biobrix"
@@ -167,7 +167,7 @@
 
   <header>
     <div class="overlay"></div>
-    <img src="biobrix-logo.png" alt="Biobrix Logo" class="logo">
+    <img src="biobrix_logo_4_1_aspect_whitebg.png" alt="Biobrix Logo" class="logo">
     <div class="lang-toggle" onclick="toggleLanguage()">FR</div>
     <div class="hero-content">
       <h1 data-en="Reimagining Drug Discovery with AI" data-fr="Réinventer la découverte de médicaments avec l'IA">Reimagining Drug Discovery with AI</h1>
