--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       position: relative;
       width: 100%;
       height: 100vh;
-      background: url('lab-photo.jpg') center/cover no-repeat;
+      background: url('lab-photo.png') center/cover no-repeat;
     }
 
     .overlay {
