--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
        Interested in partnering, investing, or joining our mission?
     </p>
     <p>Email: <a href="mailto:hello@biobrix.io" style="color: #ff4fc8;">hello@biobrix.io</a></p>
-    <p><a href="https://www.linkedin.com/company/biobrix" target="_blank" style="color: #ff4fc8;">Follow us on LinkedIn</a></p>
+    <p><a href="https://www.linkedin.com/company/biobrixtherapeutics" target="_blank" style="color: #ff4fc8;">Follow us on LinkedIn</a></p>
   </section>
 
   <footer>
