--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
   <!-- Logo Section -->
   <div class="logo">
-    <img src="lab-photo/biobrix-logo.png" alt="Biobrix Logo" />
+    <img src="biobrix_logo_4_1_aspect_whitebg.png" alt="Biobrix Logo" />
   </div>
 
   <header>
