--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
 
   <section id="about">
     <h2 data-en="About Biobrix" data-fr="À propos de Biobrix">About Biobrix</h2>
-    <p data-en="Biobrix is an AI-driven biotech startup redefining how therapies are discovered. We use morphological profiling — analyzing cell images — to identify promising compounds faster, smarter, and more precisely."
-       data-fr="Biobrix est une start-up biotechnologique alimentée par l'IA qui redéfinit la découverte de nouvelles thérapies. Nous utilisons le profilage morphologique — l'analyse des images cellulaires — pour identifier des composés prometteurs plus rapidement et plus intelligemment.">
+    <p data-en="Biobrix is a young and ambitious AI-driven biotech startup reimagining how therapies are discovered. We combine cell images, chemical structures, and other biological data to accelerate drug discovery with precision and agility."
+       data-fr="Biobrix est une jeune start-up biotechnologique ambitieuse, fondée sur l’IA, qui réinvente la découverte de nouvelles thérapies. Nous combinons des images cellulaires, des structures chimiques et d’autres données biologiques pour accélérer la découverte de médicaments avec précision et agilité.">
        Biobrix is an AI-driven biotech startup redefining how therapies are discovered. We use morphological profiling — analyzing cell images — to identify promising compounds faster, smarter, and more precisely.
     </p>
   </section>
@@ -197,7 +197,7 @@
        data-fr="Intéressé(e) par un partenariat, un investissement ou nous rejoindre ?">
        Interested in partnering, investing, or joining our mission?
     </p>
-    <p>Email: <a href="mailto:hello@biobrix.io" style="color: #ff4fc8;">hello@biobrix.io</a></p>
+    <p>Email: <a href="mailto:contact@biobrix.io" style="color: #ff4fc8;">contact@biobrix.io</a></p>
     <p><a href="https://www.linkedin.com/company/biobrix-therapeutics" target="_blank" style="color: #ff4fc8;">Follow us on LinkedIn</a></p>
   </section>
 
