--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
       <h1 data-en="Reimagining Drug Discovery with AI" data-fr="Réinventer la découverte de médicaments avec l'IA">Reimagining Drug Discovery with AI</h1>
       <p data-en="We merge machine learning with biology to accelerate the path from molecule to medicine." data-fr="Nous combinons l'apprentissage automatique avec la biologie pour accélérer le chemin du médicament.">We merge machine learning with biology to accelerate the path from molecule to medicine.</p>
       <a href="#about" class="cta" data-en="Learn More" data-fr="En savoir plus">Learn More</a>
+      <a href="#about" class="cta" data-en="Meet the Team" data-fr="L'Équipe">team</a>
     </div>
   </header>
 
