justify text in 3d cube

--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
       background-color: transparent;
       display: flex;
       justify-content: center;
+      text-align: justify;
       align-items: center;
       border: none;
       font-family: monospace;
