modified header stripe

--- a/index.html
+++ b/index.html
@@ -82,13 +82,17 @@
     /* Logo Section Styles */
     .logo {
       text-align: center;
-      margin-top: 60px;
+      #margin-top: 60px;
+      background-color: white;
+      border-bottom: 4px solid #0000001e; /* soft grey line */
+      padding: 1rem 0;
     }
 
     .logo img {
       max-width: 300px;
       width: 80%;
       height: auto;
+      margin-top: 0;
     }
 
     h1 {
